fix alignment on costs paragraph

--- a/main.css
+++ b/main.css
@@ -98,6 +98,8 @@ h4 {
 }
 .costs p {
   color: var(--light-grey);
+  display: flex;
+  align-items: center;
 }
 
 .reasoning {
@@ -130,7 +132,7 @@ h4 {
   font-weight: 700;
   border-radius: 5px;
   color: var(--white);
-  box-shadow: 0px 2px 12px 0px hsla(218, 22%, 0%, .2) 
+  box-shadow: 0px 2px 12px 0px hsla(218, 22%, 0%, 0.2);
 }
 .attribution {
   font-size: 0.6875rem;
@@ -171,9 +173,11 @@ h4 {
     white-space: pre-line;
     font-size: 1rem;
   }
+
   .cta {
     width: 100%;
     height: 100%;
+    padding-left: 40px;
     grid-area: cta;
   }
   .costs {
